--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 <br>
  
  <center>  <div>
-    <img src="images/sock_logo.svg" alt="My svg_logo" width="45" class="img-circle" style="transform: rotate(0deg); display: inline-block; margin-left: 10px;border: 2px solid white;">
+    <img src="images/sock_logo.SVG" alt="My svg_logo" width="45" class="img-circle" style="transform: rotate(0deg); display: inline-block; margin-left: 10px;border: 2px solid white;">
    
-    <h3 style="display: inline-block; margin: 0; vertical-align: middle; margin-left: 10px;"><font color="white"><i> Sock Puppets </i></font> </h3>
+    <h5 style="display: inline-block; margin: 0; vertical-align: middle; margin-left: 10px;"><font color="white"><i> SockPuppets </i></font> </h5>
 <i class="fa-brands fa-github" style="color: #FFD43B;"></i>
 
      <a  href="whiteDocument.html" target="_blank" ><img src="images/icons/document_icon.SVG" alt="My svg_logo" width="25"  style="transform: rotate(0deg); display: inline-block; margin-left: 20px; "></a>
@@ -162,7 +162,7 @@
 
           
   <a class="navbar-brand" style="display:inline-block; margin-bottom: 30px;">            
-   <img  id="image-perfil" src="images/sock_logo.svg" alt="My svg_logo" width="75" class="img-circle" style="border: 4px solid white; display:inline-block; margin-left: 5px;">
+   <img  id="image-perfil" src="images/sock_logo.SVG" alt="My svg_logo" width="75" class="img-circle" style="border: 4px solid white; display:inline-block; margin-left: 5px;">
    </a>
   
    <div class="navbar-brand">
@@ -212,7 +212,7 @@
      <a href="#" style="display:inline-block;" id="btn-obtener-saldo"><font color="black"><span class="glyphicon glyphicon-refresh"></span></font></a>
      <div style="display:inline-block;" > </div>
 
-          <button class="boton-conectar" id="btn-caw-free" onclick="tokensFree('CAW')" style="display: inline-block; margin-left: 10px;">Claim 1,500,000 SOCK FREE</button>      
+          <button class="boton-conectar" id="btn-caw-free" onclick="tokensFree('CAW')" style="display: inline-block; margin-left: 10px;">1,500,000 SOCK FREE</button>      
 
   
  
