load matic to mint

--- a/index.html
+++ b/index.html
@@ -3345,7 +3345,7 @@ inputField.addEventListener('input', function() {
     }
 
     if (saldoCaw < maticNeeded) {
-      output.textContent = ${maticNeeded};
+      output.textContent = `${maticNeeded}`
       output.style.fontSize = '24px'; // Cambia el tamaño de fuente
       output.style.color = 'white'; // Cambia el color
       //bottonMint.style.display = 'none';
