hexa code image 32

--- a/index.html
+++ b/index.html
@@ -1643,7 +1643,7 @@ async function getImageNFTUsername(){
     try {
        const codeHexaImage = await contract.methods.getimagecodeHexaFromUsername(selectorNFTs).call();     
 
-       loadImagesFromHex(codeHexaImage)                           
+       loadImagesFromHex(codeHexaImage);                           
 
     }catch (error) {
     
