--- a/index.html
+++ b/index.html
@@ -165,7 +165,9 @@
 
           
   <a class="navbar-brand" style="display:inline-block; margin-bottom: 30px;">            
-   <img  id="NFT_image-container" src="images/sock_logo.SVG" alt="My svg_logo" width="75" class="img-circle" style="border: 4px solid white; display:inline-block; margin-left: 5px;">
+   
+   <div id="NFT_image-container" alt="My svg_logo" width="75" class="img-circle" style="border: 4px solid white; display:inline-block; margin-left: 5px;"></div>
+
    </a>
 
    
