hexa code image 32

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             justify-content: center; /* Centrar las imágenes en el contenedor */
             margin: 20px; /* Espaciado alrededor del contenedor */
         }
-        .layer {
+        .nft-image {
             margin: 5px; /* Espaciado entre imágenes */
             max-width: 100px; /* Ancho máximo para las imágenes */
             
