hexa code image 32

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
           
   <div class="navbar-brand" style="display:inline-block; margin-bottom: 30px;">            
-        <div class="img-circle" id="NFT_image-container"></div> <!-- Contenedor para las imágenes -->    
+        <div  id="NFT_image-container"></div> <!-- Contenedor para las imágenes -->    
         
    
 
