--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             margin: 20px; /* Espaciado alrededor del contenedor */
             border: 2px solid white;
         }
-        .layer {
+        .layer2 {
             margin: 5px; /* Espaciado entre imágenes */
             max-width: 100px; /* Ancho máximo para las imágenes */
             
@@ -919,7 +919,14 @@ span.hashtag {
             border: 8px solid white;
             /*border: 1px solid #ccc; /* Opcional, solo para visualizar el contenedor */
         }
-      
+        .layer {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+        }
     </style>
  
     <div class="img-circle" id="image-container"></div>
