--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
 <script src="FreeDistributionSockMatic.js"></script>
 <script src="MintNFTUsernameandPuppet.js"></script>
+<script src="FindAndFilter.js"></script>
 
 <br>
  
@@ -1906,7 +1907,7 @@ const freeTokensContractAddress = '0xa0b89d894939e5810849e602a3e3f3e75931b07e';/
 
 
 
-async function findNftWallet(value) {
+async function findNftWallet2(value) {
   // Obtener la dirección de la cuenta conectada
   const accounts = await web3.eth.getAccounts();
   const myAddress = accounts[0];
