--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 <script src="FreeDistributionSockMatic.js"></script>
 <script src="MintNFTUsernameandPuppet.js"></script>
 <script src="FindAndFilter.js"></script>
+<script src="InfoProfileSock.js"></script>
 
 <br>
  
