--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           
   <div class="navbar-brand" style="display:inline-block; margin-bottom: 30px;">            
          
-        <div id="NFT_image-container" style="width: 60px; height: 60px; border: 4px solid white;  border-radius: 50%;">
+        <div id="NFT_image-container" style="width: 80px; height: 80px; display: flex; justify-content: center; align-items: center; border: 2px solid white;  border-radius: 50%;">
     <!-- Aquí se pueden agregar los elementos internos -->
 </div>
    </div>
