--- a/index.html
+++ b/index.html
@@ -993,11 +993,29 @@ span.hashtag {
 <!-- #####################################################################-->
 <!-- #####################################################################-->
 
+<!-- Modal predefinido en HTML -->
+<div class="modal fade" id="sellNFTModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modalLabel">Vender NFT</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <!-- Aquí va el contenido dinámico -->
+        <p>Precio: <span id="nftPrice"></span></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-primary">Confirmar Venta</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
-<!-- ############## ventana emergente comprar NFT ###########################-->
-<!-- #################################################################################-->
-<div class="container"> 
 
 <!-- Modal predefinido en HTML -->
 <div class="modal fade" id="sellNFTModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
