buy NFT Username

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     <div class="collapse navbar-collapse navbar-responsive-collapse">
     <ul class="nav navbar-nav navbar-right">
          
-         <li><a href="#" data-toggle="modal" data-target="#myModal" onclick="findNftWallet(`hello`)">NFT-Username</a></li>
+         <li><a href="#" data-toggle="modal" data-target="#myModal" onclick="loadImages()">NFT-Username</a></li>
           <li><a id="profile-create" href="#" data-toggle="modal" data-target="#myModalprofile">Profile</a></li>
           <!--<li><a href="#" id="btn-aprobar-contrato">Aprobar Contrato</a></li>-->
     </ul>
@@ -1014,6 +1014,11 @@ span.hashtag {
     </div>
   </div>
 </div>
+
+
+
+
+
 
 
 <!-- ############## ventana emergente mensajes directos ###########################-->
