--- a/index.html
+++ b/index.html
@@ -1002,6 +1002,38 @@ span.hashtag {
 <!-- #####################################################################-->
 <!-- #####################################################################-->
 
+
+
+<!-- Modal para Compra de NFT -->
+<div class="container"> 
+  <div class="modal fade" id="buyNftModal" role="dialog">
+    <div class="modal-dialog">
+      <!-- Contenido del modal -->
+      <div class="modal-content" style="background: linear-gradient(180deg, lime, black);">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <center><h5><font color="black">Compra NFT</font></h5></center>
+        </div>
+        <div class="modal-body">
+          <center>
+            <h6><font color="black">Estás a punto de comprar el NFT:</font></h6>
+            <div id="nft-username" style="font-weight: bold; color: white;"></div>
+            <div id="nft-price" style="margin-top: 10px; color: white;"></div>
+          </center>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" onclick="confirmPurchase()" style="background: lime; color: black;">Confirmar Compra</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
 <!-- Modal predefinido en HTML -->
 <div class="modal fade" id="sellNFTModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
