--- a/index.html
+++ b/index.html
@@ -1017,8 +1017,34 @@ span.hashtag {
         <div class="modal-body">
           <center>
             <h6><font color="black">Estás a punto de comprar el NFT:</font></h6>
-            <div id="nft-username" style="font-weight: bold; color: white;"></div>
+            
+            <style>
+        #image-container_buy {
+            position: relative;
+            width: 250px; /* Ajusta según sea necesario */
+            height: 250px; /* Ajusta según sea necesario */
+            border: 8px solid white;
+            /*border: 1px solid #ccc; /* Opcional, solo para visualizar el contenedor */
+        }
+        .layer23 {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+        }
+    </style>
+ 
+    <div class="img-circle" id="image-container_buy"></div>
+
+
+
+
+            <div id="nft-Id" style="font-weight: bold; color: white;"></div>
             <div id="nft-price" style="margin-top: 10px; color: white;"></div>
+            <div id="nft-username" style="font-weight: bold; color: white;"></div>
+            <div id="nft-date" style="margin-top: 10px; color: white;"></div>
           </center>
         </div>
         <div class="modal-footer">
