--- a/principal.html
+++ b/principal.html
@@ -299,7 +299,7 @@
                           
        <a data-toggle="tab" href="#menu_play_to_earn" style=" margin-left: 15px;">  <img  id="image-mymarket" src="images/icons/gamefi_icon.SVG" alt="mymarket" width="45"> </a>
 
-       <a data-toggle="tab" href="#menu_transfer" style=" margin-left: 15px;">  <img  id="image-service" src="images/icons/swapp_icon.SVG" alt="home" width="45"> </a>
+       <a data-toggle="tab" href="#menu_transfer" style=" margin-left: 15px;">  <img  id="image-service" src="images/icons/swap_icon.SVG" alt="home" width="45"> </a>
 
         <a data-toggle="tab" href="#menu_staking" style=" margin-left: 15px;">  <img  id="image-service" src="images/icons/staking_icon.SVG" alt="home" width="45"> </a>
 
