--- a/principal.html
+++ b/principal.html
@@ -169,11 +169,20 @@
 
  <style>
         #NFT_image-container {
-            display: flex; /* Para alinear las imágenes */
-            flex-wrap: wrap; /* Para ajustar las imágenes en varias filas */
-            justify-content: center; /* Centrar las imágenes en el contenedor */
-            margin: 20px; /* Espaciado alrededor del contenedor */
-            border: 2px solid white;
+            
+        width: 90px; 
+        height: 90px; 
+        display: flex; 
+        justify-content: center; 
+        align-items: center; 
+        border: 2px solid white; 
+        border-radius: 50%; 
+        position: absolute; 
+        top: 0%; 
+        transform: translateY(-50%);
+        left: 5px; /* Alineación a la izquierda */
+        background: black;
+    
         }
         .layer2 {
             margin: 5px; /* Espaciado entre imágenes */
