--- a/whiteDocument.html
+++ b/whiteDocument.html
@@ -104,7 +104,7 @@
                     <center> <h1> <font color="white"><p><i>Token Information</i></p></font></h1></center>
                     <br>
 
-                    <center><img src="images/coin_sockpuppets_white.svg" alt="My svg_logo" width="100" class="img-circle" style="transform: rotate(0deg); display: inline-block; margin-left: 10px; border: 4px solid white;"></center>
+                    <center><img src="images/coin_sockpuppets_white.svg" alt="My svg_logo" width="200"  style="transform: rotate(0deg);  margin-left: 10px; "></center>
                     <br>
                     
                     <br>
@@ -367,7 +367,7 @@ Only by giving you the vision and seeing what cames next may we have a truly fre
                        <font color="lime"><p>  ◯ 2: Protocol Ready (Contracts)</p></font>
                        <font color="lime"><p>  ◯ 3: Web page ready (Dapp)</p></font>
                        <font color="lime"><p>  ◯ 4: NFTUsername, Profile, Games, GamesFi, Publications and Reactions Ready</p></font>
-                       <font color="cyan"><p>  ◯ 5: Free distribution Token CAW and divulgation</p></font>
+                       <font color="cyan"><p>  ◯ 5: Free distribution Token Sock divulgation</p></font>
                        <font color="white"><p> 6: Swapp ready</p></font>
                        <font color="white"><p> 7: Direct Messages, Staking and other functions is ready</p></font>
                        <font color="white"><p> 8: Launchpad and Marketing</p></font>
