--- a/principal.html
+++ b/principal.html
@@ -187,7 +187,9 @@
     </div>
 
     <!-- Imagen NFT sobrepuesta a la izquierda -->
-    <div id="NFT_image-container">
+     <div id="NFT_image-container" style="position: absolute; top: 50%; left: 10px; transform: translateY(-50%);">
+      <!-- Ajusta la altura máxima según sea necesario -->
+    </div>
         <!-- Imagen u otros elementos internos aquí -->
     </div>
 </nav>
