--- a/principal.html
+++ b/principal.html
@@ -189,7 +189,7 @@
     <!-- Imagen NFT sobrepuesta a la izquierda -->
 
 
-     <div style="position: absolute; top: 50%; left: 10px; transform: translateY(-50%);">
+     <div  style="border: 4px solid lime; position: absolute; top: 50%; left: 10px; transform: translateY(-50%); width:90px;  height: 90px;">
         <div id="NFT_image-container"> </div>
     </div>
 
