--- a/principal.html
+++ b/principal.html
@@ -188,8 +188,8 @@
 
     <!-- Imagen NFT sobrepuesta a la izquierda -->
 
-     <div  style="border: 4px solid lime; position: absolute; top: 50%; left: 10px; transform: translateY(-50%);">
-        <div id="NFT_image-container" style=" width:100px;  height: 100px;"> </div>
+     <div  style="border: 2px solid white; border-radius: 50%; position: absolute; top: 50%; left: 10px; transform: translateY(-50%); width: 80px; height: 80px;">
+        <div id="NFT_image-container" style=" width:80px;  height: 80px;"> </div>
     </div>
 
 
