--- a/principal_wallet.html
+++ b/principal_wallet.html
@@ -98,7 +98,7 @@
 <script src="FindAndFilter.js"></script>
 
 
-<script type="module" src=".ethers.js-main/dist/ethers.min.js"></script>
+<script type="module" src="main.js"></script>
 
 
 <br>
@@ -1289,7 +1289,7 @@ const settings = {
 const alchemy = new Alchemy(settings);
 
 alchemy.core.getBlock(15221026).then(console.log);
-*/  import { ethers } from ".ethers.js-main/dist/ethers.min.js"; 
+*/ 
 
     let globalWalletKey = "";
 
