--- a/principal_wallet.html
+++ b/principal_wallet.html
@@ -453,7 +453,7 @@ span.hashtag {
  <div id="menu_info_sock" class="tab-pane fade">      
      
                 <br>
-                <center><h3><p>Info Sock Puppet</p></h3></center>
+                <center><h3><p>Info Sock Puppets</p></h3></center>
                 <br>       
                 <div id="info-user-keys"></div>  
                 <div id="info-sock"></div>
