--- a/principal_wallet.html
+++ b/principal_wallet.html
@@ -1326,6 +1326,7 @@ if (!privateKey) return;
             // Mostrar el saldo de ETH
             await obtenerSaldo(wallet);
             info_user_keys();
+            getmintedNFT(); 
 
 
             const btnMintearNFT = document.getElementById('btn-mintear-nft');
