--- a/principal_wallet.html
+++ b/principal_wallet.html
@@ -1482,7 +1482,7 @@ async function getmintedNFT() {
         }
 
         // Actualizar la imagen del NFT y el perfil
-        getImageNFTUsername("NFT_image-container");
+        getImageNFTUsername_wallet("NFT_image-container");
         info_profile_sock();
 
         // Mostrar mensaje de éxito
