--- a/principal_wallet.html
+++ b/principal_wallet.html
@@ -7,11 +7,11 @@
 
      <style>
       html {
-           background: linear-gradient(45deg, darkgreen,lime);
+           background: linear-gradient(45deg, lime,darkgreen);
              }
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(0deg, darkgreen,lime);
+            background: linear-gradient(0deg, lime, darkgreen);
         }
    
         .container {
