--- a/principal_wallet.html
+++ b/principal_wallet.html
@@ -147,7 +147,7 @@
     <div style="display:inline-block;" id= "addres-wallet"><font color="white"></font></div>
 
 
-    <div style="display:inline-block;" ><button class="boton-conectar" id="btn-conectar" onclick="conectarMetaMask()" style="display: inline-block; margin-left: 20px;">Connect</button> </div>
+    <!--<div style="display:inline-block;" ><button class="boton-conectar" id="btn-conectar" onclick="conectarMetaMask()" style="display: inline-block; margin-left: 20px;">Connect</button> </div>-->
    
     <div style="display:inline-block;" > </div>
 
@@ -199,7 +199,7 @@
 
     <!-- Imagen NFT sobrepuesta a la izquierda -->
 
-     <div  style="border: 2px solid white; border-radius: 50%; position: absolute; top: 50%; left: 10px; transform: translateY(-50%); width: 80px; height: 80px;">
+     <div  style="border-radius: 50%; position: absolute; top: 50%; left: 10px; transform: translateY(-50%); width: 80px; height: 80px;">
         <div id="NFT_image-container" style=" width:80px;  height: 80px;"> </div>
     </div>
 
