--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
 
 <script>
     function goToMainPage() {
-        window.location.href = 'principal_wallet.html';
+        window.location.href = 'principal_new.html';
     }
 
     function goToSockMetamask() {
-        window.location.href = 'principal.html';
+        window.location.href = 'principal_new.html';
     }
 
     async function createWallet() {
